editing file home.ejs & menambahkan file login.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,34 @@
-<h1>Login success</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Home Page</title>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Welcome to Govote</h1>
+        </header>
+
+        <section class="auth-options">
+            <!-- <div class="login">
+                <h2>Login</h2>
+                <form action="login.php" method="post">
+                    <label for="loginUsername">Username:</label>
+                    <input type="text" id="loginUsername" name="loginUsername" required>
+
+                    <label for="loginPassword">Password:</label>
+                    <input type="password" id="loginPassword" name="loginPassword" required>
+
+                    <button type="submit">Login</button>
+                </form>
+            </div> -->
+            <a class="login" href="/login">Login</a>
+            <a class="signup" href="/signup">Sign Up</a>
+            
+        </section>
+    </div>
+</body>
+</html>
