--- a/views/nav-link/sidebar.ejs
+++ b/views/nav-link/sidebar.ejs
@@ -1,7 +1,7 @@
 <div class="links-container" id="sidebar">
   
     <a href="/dashboard" target="_blank" class="menu-routing">Dashboard</a>
-    <a href="/CreatePoll" target="_blank" class="menu-routing">Create a pool</a>
+    <a href="/Add_New_Election" target="_blank" class="menu-routing">Create a pool</a>
     <a href="/Result" target="_blank" class="menu-routing">Result</a>
     
    
