--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -56,7 +56,7 @@
             <p id="number" class="invalid">A <b>number</b></p>
             <p id="length" class="invalid">Minimum <b>8 characters</b></p>
           </div>
-          <p>Already have an account? <a href="/login">Log In</a> instead</p>
+          <p>Already have an account? <a href="/login" id="login-link">Log In</a> instead</p>
         </div>
       </div>
     </div>
