--- a/static-path/css/Add_New_Election.css
+++ b/static-path/css/Add_New_Election.css
@@ -2,6 +2,7 @@ body, h1, h2, h3, p, ul, li, figure, figcaption, div {
   margin: 0;
   padding: 0;
   border: 0;
+  font-family: 'Arial', sans-serif;
 }
 
 h2{
@@ -129,6 +130,7 @@ label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
+  font-family: 'Arial', sans-serif;
   
 }
 
@@ -143,6 +145,7 @@ input[type="datetime-local"] {
   border: 1px solid #657585;
   color: #fff;
   border-radius: 5px;
+  font-family: 'Arial', sans-serif;
 }
 
 ::placeholder {
@@ -155,9 +158,17 @@ textarea,
 input[type="datetime-local"] {
   color: #9d9d9d;
   color: #fff;
+  font-family: 'Arial', sans-serif;
 }
 
 #election-description{
   font-family: 'Arial', sans-serif;
   color: #fff;
+}
+
+#notif{
+  margin-top: 1%;
+  margin-bottom: 1%; 
+  font-family: 'Arial', sans-serif;
+  font-weight: bolder;
 }
