--- a/static-path/css/styles.css
+++ b/static-path/css/styles.css
@@ -199,30 +199,36 @@ input {
 
  */
 
-
 /* STYLING UNTUK SIGNUP */
 #signup-close-window-link {
   margin: 35px;
   padding: 5px 10px;
   border-radius: 5px;
   text-decoration: none;
-  background-color: white;
-  color: black;
+  background: rgba(255, 255, 255, 0.2);
   font-weight: bold;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
   top: 30px;
+  color: white;
 }
 .signup-form {
   max-width: 600px;
   margin: 50px auto;
-  background-color: #fff;
+  background: rgba(255, 255, 255, 0.2);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 #signup label {
   font-size: 16px;
+  color: white;
+}
+#signup h1,
+#signup h2,
+#signup p,
+#signup h4 {
+  color: white;
 }
 #signupSubmit {
   font-size: 16px;
@@ -233,7 +239,7 @@ input {
 }
 #message {
   display: none;
-  background: #f1f1f1;
+  background: rgba(255, 255, 255, 0.2);
   color: #000;
   position: relative;
   padding: 8px 15px;
@@ -258,4 +264,7 @@ input {
   position: relative;
   left: -10px;
   content: "\00D7";
+}
+#login-link {
+  color: #c5c5c5;
 }
