--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Login Page</title>
+    <title>Sign Up Page</title>
   </head>
   <body>
     <!-- Sign Up EJS -->
@@ -56,7 +56,7 @@
             <p id="number" class="invalid">A <b>number</b></p>
             <p id="length" class="invalid">Minimum <b>8 characters</b></p>
           </div>
-          <p>Already have an account? <a href="/login">Log In</a> instead</p>
+          <p>Already have an account? <a href="/login" id="login-link">Log In</a> instead</p>
         </div>
       </div>
     </div>
