--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,58 +18,32 @@
     <div class="container">
 
       <div class="voting-section">
-        <%// elections.forEach(election => { //%>
+        <% elections.forEach(election => { %>
+          <% if (election.requestStatus === 1) { %>
             <div class="voting-box">
-                <a href="/addvote/<%=// election.electionID %>">
-                    <h2><%=// election.title //%></h2>
-                    <p><%=//election.description //%></p>
+                <a href="/approve/<%= election.electionID %>">
+                    <h2><%= election.title %></h2>
+                    <p><%= election.description %></p>
                 </a>
             </div>
-        <%// }); //%>
-    </div>
-
-      <div class="voting-section">
-        <div class="voting-box">
-          <a href="/addvote">
-            <h2>Judul Voting 1</h2>
-            <img src="gambar1.jpg" alt="Gambar 1">
-          </a>
-        </div>
-        <div class="voting-box">
-          <a href="/addvote">
-            <h2>Judul Voting 2</h2>
-            <img src="gambar1.jpg" alt="Gambar 1">
-          </a>
-        </div>
-        <div class="voting-box">
-          <a href="/addvote">
-            <h2>Judul Voting 3</h2>
-            <img src="gambar1.jpg" alt="Gambar 1">
-          </a>
-        </div>
+            <% } %>
+        <% }); %>
+          </div>
         <div class="request-section">
           <p>Request</p>
         </div>
-        <div class="voting-box">
-          <a href="/requested">
-            <h2>Judul Voting 4</h2>
-            <img src="gambar4.jpg" alt="Gambar 4">
-          </a>
-        </div>
-        <div class="voting-box">
-          <a href="/requested">
-            <h2>Judul Voting 5</h2>
-            <img src="gambar5.jpg" alt="Gambar 5">
-          </a>
-        </div>
-        <div class="voting-box">
-          <a href="/requested">
-            <h2>Judul Voting 6</h2>
-            <img src="gambar5.jpg" alt="Gambar 5">
-          </a>
-        </div>
+          
+          <% elections.forEach(election => { %>
+              <% if (election.requestStatus === 0 ) { %>
+                  <div class="voting-box">
+                      <a href="/requested/<%= election.electionID %>">
+                          <h2><%= election.title %></h2>
+                          <p><%= election.description %></p>
+                      </a>
+                  </div>
+              <% } %>
+          <% }); %>
         
-      </div>
       
     </div>
   </div>
