--- a/views/nav-link/sidebar.ejs
+++ b/views/nav-link/sidebar.ejs
@@ -1,8 +1,8 @@
 <div class="links-container" id="sidebar">
   
-    <a href="/dashboard" target="_blank" class="menu-routing">Dashboard</a>
-    <a href="/CreatePoll" target="_blank" class="menu-routing">Create a pool</a>
-    <a href="/Result" target="_blank" class="menu-routing">Result</a>
+    <a href="/dashboard" class="menu-routing">Dashboard</a>
+    <a href="/CreatePoll" class="menu-routing">Create a pool</a>
+    <a href="/Result" class="menu-routing">Result</a>
     
    
 </div>
