--- a/static-path/css/default-styling.css
+++ b/static-path/css/default-styling.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
 }
 
 button:hover,
-input[type='submit']:hover {
+input[type="submit"]:hover {
   color: black;
   background-color: white;
   border: 1px solid black;
@@ -15,7 +14,7 @@ input[type='submit']:hover {
 }
 
 button,
-input[type='submit'] {
+input[type="submit"] {
   padding: 0.4rem;
   background-color: rgb(0, 0, 0);
   border: 1px solid rgb(0, 0, 0);
@@ -23,7 +22,6 @@ input[type='submit'] {
   border-radius: 3px;
   margin-right: 0;
 }
-
 
 a {
   color: #0038ff;
@@ -33,16 +31,11 @@ button,
 a {
   font-weight: 450;
 }
-
-a:last-child {
-  margin: 0;
-}
 .hidden {
   display: none !important;
 }
 
 .brandName {
-  
   font-size: 1.5rem;
   font-weight: 700;
 }
@@ -91,13 +84,16 @@ a {
 
 .menu-routing {
   margin: 1rem 0;
-  padding: 0.4rem;
+  padding: 0.4rem 0;
   text-align: center;
-  border: 2px solid black;
   border-radius: 10px;
-  max-width: fit-content;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.2);
+  width: 150px;
 }
 
-
-
+.menu-routing:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
