perbaikan backend untuk dashboard dan requested

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
 <body>
   <div id="wrapper">
     <section id="left-sidebar">
-      <h2>Selamat Datang, nama</h2>
+      <h2>Selamat Datang,  <%- name[0].name %></h2>
       <%- include('nav-link/sidebar'); %>
     </section>
     <div class="container">
