update css seluruh page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,13 +5,12 @@
     <title>Halaman Voting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <link rel="stylesheet" href="/css/default-styling.css" />
     <link rel="stylesheet" href="/css/dashboard.css" />
   </head>
   <body>
     <div id="wrapper">
       <section id="left-sidebar">
-        <h2>Selamat Datang, nama</h2>
+        <h2>Selamat Datang, [Nama Pengguna].</h2>
         <%- include('nav-link/sidebar'); %>
       </section>
       <div class="container">
