--- a/views/nav-link/sidebar.ejs
+++ b/views/nav-link/sidebar.ejs
@@ -1,5 +1,5 @@
 <div class="links-container" id="sidebar">
   <a href="/dashboard-user" class="menu-routing">Dashboard</a>
-  <a href="/CreatePoll" class="menu-routing">Create a pool</a>
+  <a href="/Add_New_Election" class="menu-routing">Create a pool</a>
   <a href="/Result" class="menu-routing">Result</a>
 </div>
