--- a/static-path/css/dashboard.css
+++ b/static-path/css/dashboard.css
@@ -1,71 +1,140 @@
-body {
+body, h1, h2, h3, p, ul, li, figure, figcaption, div {
   margin: 0;
-  font-family: "Material Symbols Rounded", sans-serif;
-  background-color: #05293c;
-  color: #fff;
+  padding: 0;
+  border: 0;
+  font-family: 'Arial', sans-serif;
+}
+
+h2 {
+  margin-bottom: 10%;
+}
+
+body {
+  background-color: #05293C;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  color: white;
 }
 
 #wrapper {
-  flex-grow: 1;
   display: flex;
+  flex: 1;
 }
 
 #left-sidebar {
-  width: 250px;
-  background-color: #00202f;
+  position: fixed;
+  height: 100vh; /* Gunakan viewport height untuk memenuhi tinggi layar */
+  background-color: #05293C;
   color: #fff;
   padding: 20px;
+  width: 250px;
+  min-width: 250px;
   box-sizing: border-box;
-  position: fixed;
-  height: 100%;
-  top: 0;
+  overflow-y: auto;
+}
+
+.links-container {
+  display: flex;
+  flex-direction: column;
+}
+h2{
+  margin-bottom: 10%;
+  font-weight: bold;
 }
 
 .container {
-  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
   padding: 20px;
-  box-sizing: border-box;
-  margin-left: 250px;
-  margin-top: 40px;
+  flex-grow: 1;
+  margin-left: 250px; /* Sesuaikan dengan lebar #left-sidebar */
+  width: calc(100% - 250px); /* Sesuaikan dengan lebar #left-sidebar */
 }
 
-.voting-section {
+.voting-section,
+.request-section {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  justify-content: space-between;
+  width: 100%; /* Gunakan lebar penuh */
+  margin-left: 0; /* Tidak ada margin kiri */
 }
 
 .voting-box {
-  flex: 1 0 calc(33.33% - 20px);
+  background-color: #657585;
+  color: #fff;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
   box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.2);
-  padding: 15px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  width: 100%; /* Gunakan lebar penuh */
+  text-decoration: none;
+}
+
+.voting-box a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .voting-box:hover {
-  background: rgba(255, 255, 255, 0.2);
-  transform: scale(1.03);
+  background-color: #444D56;
 }
 
-.request-section {
-  flex: 1 0 100%;
-  margin-top: 20px;
-  border-top: 2px solid #666;
-  padding-top: 20px;
+.voting-box h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
 }
-a {
+
+.voting-box p {
+  font-size: 1em;
+}
+
+.request-section p {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.alert {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  font-family: 'Arial', sans-serif;
+  font-weight: bolder;
+}
+
+.menu-routing {
+  display: block;
+  font-weight: bolder;
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  text-align: center;
   text-decoration: none;
-  color: white;
-  font-weight: 500;
+  cursor: pointer;
+  margin: 5px 0;
+  border-radius: 5px;
+  color: #0EA5E9;
+  background-color: #444D56;
+  transition: background-color 0.3s, color 0.3s;
+  border: #0EA5E9;
+  border-color: #0EA5E9;
+  border-style: solid;
+  border-width: 1px;
 }
-h2 {
-  font-weight: 600;
+
+.menu-routing:hover {
+  background-color: #0EA5E9;
+  color: #fff;
 }
-img {
-  scale: 100%;
+
+.menu-routing:active {
+  transform: translateY(2px);
 }
+p{
+  font-size: larger;
+}
+
