--- a/static-path/css/requested.css
+++ b/static-path/css/requested.css
@@ -1,41 +1,140 @@
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li,
+figure,
+figcaption,
+div {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: 'Arial', sans-serif;
+}
+h2{
+  margin-bottom: 10%;
+}
+
+body {
+  background-color: #05293C;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  color: white;
+}
+
+#wrapper {
+  display: flex;
+  flex: 1;
+}
+
+#left-sidebar {
+  background-color: #05293C;
+  color: #fff;
+  padding: 20px;
+  width: 250px;
+  min-width: 250px;
+  box-sizing: border-box;
+}
+
+.links-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  flex-grow: 1;
+}
+
+.menu-routing {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.menu-routing:hover {
+  background-color: #555;
+}
+
 .requested-section {
-  background: rgba(255, 255, 255, 0.2);
+  background-color: #657585;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  margin-top: 40px;
+  box-sizing: border-box;
   color: #fff;
 }
 
+h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
 .action-buttons {
-  margin-top: 20px;
+  display: flex;
+  gap: 10px;
 }
 
 .approve-button,
 .reject-button {
-  color: #fff;
-  padding: 10px 15px;
+  background-color: #444D56;
+  color: #0EA5E9;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-right: 10px;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-.approve-button {
-  background-color: #4caf50;
-}
-.reject-button {
-  background-color: #f44336;
+  transition: background-color 0.3s;
+  border-color: #0EA5E9;
+  border-style: solid;
+  font-weight: bolder;
+  border-width: 1px;
 }
 
-.approve-button:hover {
-  background-color: #3b953e;
-  border: none;
-  color: white;
-}
+.approve-button:hover,
 .reject-button:hover {
-  background-color: #d82b1f;
-  border: none;
-  color: white;
+  background-color: #0EA5E9;
+  color: #fff;
+}
+
+.menu-routing {
+  display: block;
+  font-weight: bolder;
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  margin: 5px 0;
+  border-radius: 5px;
+  color: #0EA5E9;
+  background-color: #444D56;
+  transition: background-color 0.3s, color 0.3s;
+  border: #0EA5E9;
+  border-color: #0EA5E9;
+  border-style: solid;
+  border-width: 1px;
+}
+
+.menu-routing:hover {
+  background-color: #0EA5E9;
+  color: #fff;
+}
+
+.menu-routing:active {
+  transform: translateY(2px);
 }
