--- a/views/requested.ejs
+++ b/views/requested.ejs
@@ -5,8 +5,8 @@
   <title>Requested Election</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
-  <link rel="stylesheet" href="/css/default-styling.css">
-  <link rel="stylesheet" href="/css/dashboard.css">
+  <!-- <link rel="stylesheet" href="/css/default-styling.css">
+  <link rel="stylesheet" href="/css/dashboard.css"> -->
   
   <link rel="stylesheet" href="/css/requested.css">
 </head>
@@ -14,7 +14,6 @@
   <div id="wrapper">
     <section id="left-sidebar">
       <h2>Selamat Datang, <%//= namaPengguna //%>.</h2>
-      
       <%- include('nav-link/sidebar'); %>
     </section>
     <div class="container">
