Co-authored-by: angelinatrnjy <angelinatrnjy@users.noreply.github.com>backend dashboard

--- a/views/requested.ejs
+++ b/views/requested.ejs
@@ -29,7 +29,7 @@
           <div class="action-buttons">
             <!-- Form for accepting the request -->
             <form action="/process-request/accept" method="post" style="display: inline;">
-              <input  name="electionID" value="<%= requestedElection.electionID %>">
+              <input  type="hidden" name="electionID" value="<%= requestedElection.electionID %>">
               
               <button type="submit" class="approve-button">Accept</button>
             </form>
