testing & bug fixing

--- a/views/nav-link/admin.ejs
+++ b/views/nav-link/admin.ejs
@@ -3,7 +3,7 @@
         margin-bottom: 2rem;
     }
 </style>
-<h2 class="nav-title">Selamat Datang, <%= namaLengkap %>.</h2>
+<h2 class="nav-title">Selamat Datang, <%= nama%>.</h2>
 <div class="links-container" id="menu-admin">
     <h3>Menu Admin</h3>
     <a href="/admin-user" class="menu-routing">Users</a>
