--- a/views/requested.ejs
+++ b/views/requested.ejs
@@ -30,7 +30,7 @@
             <!-- Form for accepting the request -->
             <form action="/process-request/accept" method="post" style="display: inline;">
               <input  type="hidden" name="electionID" value="<%= requestedElection.electionID %>">
-              <!-- <input  type="hidden" name="voterID" value="<%= //requestedElection.voterID %>"> -->
+              <input  type="hidden" name="voterID" value="<%= requestedElection.voterID %>">
               <button type="submit" class="approve-button">Accept</button>
             </form>
           
